framec_tests/language_specific/typescript/v3_capabilities/system_params/positive/system_params_multi_groups_v3.frm
@target typescript

// Name-based grouping with multiple $(...)/$>(...) segments.
// @core
system SystemParamsMultiTs($(color), $>(enterColor), $(extra)) {
    interface:
        run(extra: string)

    machine:
        $Red(color: string, extra: string) {
            $>(enterColor: string) { }
            run(extra: string) {
                -> $Red(color, extra)
            }
        }

    domain:
        extra: string = "x"
}
