framec_tests/language_specific/typescript/v3_capabilities/system_params/negative/system_enter_param_missing_v3.frm
@target typescript
# @expect: E417

// Negative: system $>(...) params declared but start state has no $>() handler.

system SystemEnterParamMissingTs($(color), $>(enterColor), domain) {
    interface:
        run()

    machine:
        $Red(color: string) {
            run() {
                -> $Red(color)
            }
        }

    domain:
        domain = null
}

